Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <meta name="twitter:title" content="MediMatch">
   <meta property="og:description" content="Resolving the gap in emergency healthcare">
   <meta name="twitter:description" content="Resolving the gap in emergency healthcare">
+  <meta name="google-site-verification" content="XkP72Ti5w_4L5IiuunhOHTCvnYNgJ5TPZ85-GZRqAh4" />
 </head>
 
   <body>
